# healthcare-rcm-intelligence

./: .env.example  .gitignore  CLAUDE.md  LICENSE  Makefile  PROMPTS.md  README.md  docker-compose.yml  pyproject.toml  tasks.md
.claude/: settings.json
.claude/agents/: analytics-engineer.md  app-engineer.md  data-engineer.md  ml-engineer.md  qa-reviewer.md  simulation-engineer.md
.github/workflows/: ci.yml
config/: model.yaml  simulation.yaml  sources.yaml
docs/: assumptions.md  data_dictionary.md  model_card.md  provenance_register.md  simulated_forbidden_columns.md
notebooks/: 01_data_quality_and_provenance.py  02_denial_root_cause_and_authorization.py  03_payment_timing_and_survival.py  04_risk_adjusted_facility.py  05_process_mining.py  06_interrupted_time_series.py  README.md  analytics_common.py
sql/ddl/: 00_schema.sql  10_dimensions.sql  20_facts.sql  30_sim_crosswalk.sql  40_quarantine.sql  50_sim_adjudication.sql  60_reference_codes.sql
sql/quality/: view_reconciliation.py
sql/views/: apply_views.py  vw_ar_aging.sql  vw_claim_enriched.sql  vw_clean_claim_performance.sql  vw_data_quality_scorecard.sql  vw_denial_root_cause.sql  vw_executive_rcm_summary.sql  vw_model_monitoring.sql  vw_payer_performance.sql  vw_work_queue_priority.sql
src/ingestion/: cms_synthetic.py  crosswalk.py  http.py  load_postgres.py  logging_utils.py  manifest.py  nppes.py  paths.py  reference.py  reference_codes.py  run.py  sources.py  star_transform.py  warehouse_checks.py  warehouse_sql_checks.py
src/simulation/: base.py  config.py  generator.py  load_sim.py  run.py  sim_sql_checks.py  validate.py
src/validation/: contracts.py  contracts_run.py  run.py  schemas.py  stage_parquet.py
tests/: conftest.py  test_smoke.py
tests/contracts/: test_checksum_reconciliation.py  test_crosswalk.py  test_data_contracts.py  test_manifest.py  test_nppes_filter.py  test_reference_codes.py  test_sources_config.py  test_star_transform.py  test_validation_schema.py
tests/integration/: conftest.py  test_end_state.py  test_reference_codes_postgres.py  test_simulation_postgres.py  test_warehouse_postgres.py
tests/simulation/: conftest.py  test_forbidden_columns_doc.py  test_reproducibility.py  test_validity.py
