[project]
name = "healthcare-rcm-intelligence"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.2", "pyarrow>=16", "numpy>=1.26",
  "sqlalchemy>=2.0", "psycopg2-binary>=2.9", "duckdb>=1.0",
  "scikit-learn>=1.5", "xgboost>=2.1", "shap>=0.46",
  "lifelines>=0.29", "scipy>=1.13", "statsmodels>=0.14",
  "fastapi>=0.111", "uvicorn>=0.30", "pydantic>=2.7",
  "streamlit>=1.36", "plotly>=5.22",
  "pyyaml>=6.0", "requests>=2.32",
]

[dependency-groups]
dev = ["pytest>=8.2", "ruff>=0.5", "pytest-cov>=5.0"]

[tool.ruff]
line-length = 100
